changed the instance of impl class to interface